--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ p {
     opacity: 0;
     transform: scale(0.8);
     transition: opacity 0.6s ease, transform 0.6s ease;
-    max-width: 20%;
+    max-width: 250px;
     height: 600px;
     overflow: hidden; /* Ocultar o texto que excede a altura */
 }
@@ -67,7 +67,7 @@ p {
     bottom: 30px;
 }
 
-.btn {
+.btn_comprar {
     display: inline-block;
     padding: 10px 20px;
     background-color: #b59065; /* Cor de fundo do botão */
@@ -77,6 +77,16 @@ p {
     transition: background-color 0.3s ease; /* Adicionando uma transição suave para a mudança de cor de fundo */
     position: absolute;
     bottom: 0;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #b59065; /* Cor de fundo do botão */
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease; /* Adicionando uma transição suave para a mudança de cor de fundo */
 }
 
 .btn:hover {
