--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ p {
 
 /* Estilos da barra de navegação */
 .navbar {
-    background-color: #574f4a; /* Cor de fundo da barra de navegação */
+    background-color: #8c6f4b; /* Cor de fundo da barra de navegação */
     padding: 10px 0;
     position: fixed;
     top: 0;
