--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #f9f6f2; /* Cor de fundo suave */
+    max-width: 100vw; /* Definir a largura máxima igual à largura da tela */
+    overflow-x: hidden; /* Impede o scroll horizontal */
 }
 
 /* Estilos específicos para cada seção */
@@ -121,6 +123,15 @@ p {
     height: auto;
 }
 
+.menu {
+    color: #fff;
+    font-size: 24px;
+    line-height: 60px;
+    cursor: pointer;
+    display: none;
+    left: 0;
+}
+
 /* Estilos responsivos */
 @media (max-width: 768px) {
     section {
@@ -128,23 +139,44 @@ p {
         justify-content: center;
         align-items: center;
         text-align: center;
+        box-sizing: border-box;
     }
 
     .navbar {
+        max-width: 100%;
         text-align: center; /* Centralizar os botões do menu */
+        padding: 0;
+        margin: 0;
     }
 
     .navbar ul {
-        display: flex;
+        display: none;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    .navbar ul.active {
+        display: flex; /* Mostra a lista de navegação quando o menu é ativado */
+    }
+
+    .menu {
+        display: block; /* Mostra o ícone de menu em telas menores */
+        float: left;
+        cursor: pointer;
+        color: #fff;
+        font-size: 24px;
+        line-height: 15px;
+        padding-left: 10px;
     }
 
     .navbar li {
-        display: block;
+        display: flex;
         margin: 10px 0;
         text-align: center;
+        padding: 0;
     }
 
     .navbar a {
@@ -192,7 +224,7 @@ p {
 
     /* Adicionando margem superior à seção de destaque para afastá-la da barra de navegação */
     #home {
-        margin-top: 200px; /* Ajuste conforme necessário para acomodar a altura da barra de navegação */
+        margin-top: 20px; /* Ajuste conforme necessário para acomodar a altura da barra de navegação */
     }
 
 }
@@ -265,5 +297,3 @@ p {
     margin: 0 auto; /* Centralizar container */
     max-width: none; /* Definir largura máxima do container */
 }
-
-
