--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 section {
     text-align: center;
     color: #363636; /* Cor do texto principal */
+    overflow-x: hidden;
 }
 
 /* Estilo para o título de cada seção */
@@ -143,6 +144,7 @@ p {
     }
 
     .navbar {
+        display: block;
         max-width: 100%;
         text-align: center; /* Centralizar os botões do menu */
         padding: 0;
